# nixos-flake

./: .gitignore  README.md  configuration.nix  flake.nix  hardware-configuration.nix  home.nix
desktop-env/gnome/: dconf.nix  extensions.nix  home.nix  keybindings.nix  prefs.nix  system.nix
examples/: nodejs-prisma.nix
home-manager/: btop.nix  discord.nix  gnome-terminal.nix  gtk.nix  keepassxc.nix  neofetch.nix  spicetify.nix  starship.nix  zsh.nix
modules/gnome/: gtk.nix  home.nix  keybindings.nix  prefs.nix  system.nix
modules/system/: audio.nix  boot.nix  local.nix  network.nix  programs.nix  services.nix  user.nix
nixos/: default.nix  hardware.nix  system.nix
nixos/common/: boot.nix  default.nix  fonts.nix  home.nix  network.nix  services.nix  user.nix
nixos/home/: dconf.nix  default.nix  spicetify.nix
nixos/laptop-gnome/: default.nix  hardware.nix  home.nix  system.nix
nixos/sources/: apple-font.nix
pkgs/catppuccin-grub-theme/: default.nix
pkgs/discord-krisp-patcher/: default.nix
pkgs/keepassxc-populate-keys/: default.nix  populate-keys.sh
pkgs/nautilus-open-in-blackbox/: default.nix  paths.patch
pkgs/vscode/: default.nix
systems/north-star/: default.nix  hardware.nix  home.nix  system.nix
templates/: default.nix  nodejs.nix
templates/empty/: flake.nix
templates/nodejs/: flake.nix
templates/nodejs-prisma/: flake.nix
templates/nodejs-typescript/: .envrc  flake.nix  package.json  tsconfig.json
templates/rust-tauri/: .gitignore  flake.nix  package.json  vite.config.ts
templates/rust-tauri/src-tauri/: Cargo.toml
(+18 files in other folders)
