[package]
name = "tauri-app"
version = "0.0.1-beta"
description = "A Tauri App"
authors = ["BlankParticle"]
edition = "2021"
repository = "https://github.com/BlankParticle/"
license = "MIT"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
